fix: Bypass alignment issue with OD
Bypass alignment issue with original design.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -274,10 +274,15 @@ body * {
   clear: both;
 }
 
+html {
+  font-size: 16px;
+}
+
 body {
   color: #777777;
   font-family: "Lato", sans-serif;
-  line-height: 1.5;
+  font-size: 1rem;
+  line-height: 1.5rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   letter-spacing: 0;
@@ -343,6 +348,7 @@ strong {
   position: relative;
   top: -1px;
   left: -1px;
+  margin-left: -2px;
 }
 .amicons--brush:before {
   content: "\e900";
@@ -657,6 +663,18 @@ strong {
 }
 .am-upsell__title:last-child {
   margin-bottom: 0;
+}
+.am-upsell__content {
+  padding: 0 8px;
+}
+.am-upsell--bypass-1 {
+  margin-left: -2px;
+}
+.am-upsell--bypass-2 {
+  margin-left: -4px;
+}
+.am-upsell--bypass-3 {
+  margin-left: -6px;
 }
 
 .am-block {
