--- a/assets/scss/_core/_icons.scss
+++ b/assets/scss/_core/_icons.scss
@@ -58,6 +58,7 @@ $icons-size: (
 		position: relative;
 		top: -1px;
 		left: -1px;
+		margin-left: -2px;
 	}
 
 	@each $icon, $code in $icons-list {
